--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,10 +5,16 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/layout3">
 
+    <data>
+        <variable
+                name="myCredentials"
+                type="com.example.terasystemhris.MyCredentials"/>
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".profile">
+            tools:context=".Profile">
 
         <androidx.appcompat.widget.Toolbar
                 android:id="@+id/activity_profile_toolbar"
