--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -55,7 +55,7 @@
                 android:layout_marginEnd="16dp"
                 app:layout_constraintHorizontal_bias="0.41"
                 app:layout_constraintTop_toBottomOf="@+id/activity_update_toolbar"
-                app:layout_constraintBottom_toTopOf="@+id/update_profile_button">
+                app:layout_constraintBottom_toTopOf="@+id/update_button_holder">
 
             <LinearLayout
                     android:orientation="vertical"
@@ -204,27 +204,127 @@
                         android:layout_marginStart="16dp"
                         android:layout_marginEnd="16dp"
                         android:layout_marginTop="8dp"
-                        android:maxLength="15"/>
+                        android:maxLength="15"
+                        android:hint="@string/what_is_your_landline"/>
 
             </LinearLayout>
         </ScrollView>
 
-
-        <Button
-                android:text="@string/update_button_text"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="0dp"
+        <FrameLayout
+                android:id="@+id/update_button_holder"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:fontFamily="@font/roboto"
-                android:id="@+id/update_profile_button"
-                android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/update_profile_scrollview"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintVertical_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+
+            <Button
+                    android:text="@string/update_button_text"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:fontFamily="@font/roboto"
+                    android:id="@+id/update_profile_button"
+                    android:layout_marginTop="8dp"
+                    android:background="#1D8ECE"/>
+
+        </FrameLayout>
+
+    <FrameLayout
+            android:id="@+id/updateProgressBarHolder"
+            android:animateLayoutChanges="true"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:alpha="0.4"
+            android:layout_width="match_parent"
+            android:fillViewport="false"
+            android:visibility="gone"
+            android:background="#000000"
+            android:clickable="true"
+            android:layout_height="0dp">
+
+        <ProgressBar
+                style="?android:attr/progressBarStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/progressBar"
+                android:indeterminate="true"
+                android:layout_gravity="center"
+
+                />
+    </FrameLayout>
+
+        <FrameLayout
+                android:id="@+id/updatePopupHolder"
+                android:animateLayoutChanges="true"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:background="#1D8ECE"/>
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:fillViewport="false"
+                android:clickable="true"
+                android:layout_height="wrap_content"
+                android:background="@drawable/my_border"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_height="250dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="8dp"
+                    android:background="@color/ic_launcher_background"
+                    android:layout_marginEnd="8dp">
+
+                <TextView
+                        android:id="@+id/updateTxtClose"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:textColor="#03A9F4"
+                        android:text="@string/close_icon"
+
+                        android:textStyle="bold"
+                        android:layout_gravity="end"
+                        android:gravity="center"
+                        android:layout_marginEnd="8dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginTop="8dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginBottom="8dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_marginStart="8dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintHorizontal_bias="1.0"
+                        app:layout_constraintVertical_bias="0.0"
+                        android:textSize="24sp"/>
+
+
+                <TextView
+                        android:id="@+id/update_network_status"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="Connection Timed Out"
+                        android:textSize="18sp"
+                        android:textColor="#000000"
+                        android:layout_marginEnd="8dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginStart="8dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_marginTop="8dp"
+                        app:layout_constraintTop_toTopOf="parent"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </FrameLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
