--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -64,8 +64,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/activity_profile_toolbar"
                 app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintBottom_toBottomOf="parent"
-                >
+                app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+                android:layout_marginBottom="8dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -209,7 +209,8 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        android:id="@+id/linearLayout2">
+                        android:id="@+id/linearLayout2"
+                        android:layout_marginBottom="8dp">
 
                     <Button
                             android:text="@string/update_button_text"
@@ -228,6 +229,24 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </ScrollView>
+
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottom_navigation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                app:labelVisibilityMode="labeled"
+                app:menu="@menu/navigation"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                android:layout_marginTop="8dp"
+                app:layout_constraintVertical_bias="1.0"
+                app:itemIconTint="@color/colorAccent"
+                app:itemTextColor="@color/colorAccent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
